add reading notes

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -23,6 +23,6 @@ description:
 page_title: "🪴 Biubi's Drawer"
 links:
   - link_name: Twitter
-    link: https://twitter.com/_jzhao
+    link: https://twitter.com/Sylvie_Hsu
   - link_name: Github
     link: https://github.com/Sylvie-Hsu
